--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
     "react-image-lightbox": "^5.1.1",
-    "react-scripts": "3.4.3",
+    "react-scripts": "^4.0.3",
     "react-scroll": "^1.8.1",
     "reactstrap": "^8.5.1"
   },
@@ -28,8 +28,7 @@
   },
   "eslintConfig": {
     "extends": [
-      "react-app",
-      "fbjs"
+      "react-app"
     ]
   },
   "browserslist": {
@@ -45,8 +44,8 @@
     ]
   },
   "devDependencies": {
-    "eslint-config-fbjs": "^3.1.1",
     "gh-pages": "^3.1.0",
-    "react-snap": "^1.23.0"
+    "react-snap": "^1.23.0",
+    "sass": "^1.39.0"
   }
 }
