--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-image-lightbox": "^5.1.4",
+    "react-placeholder": "^4.1.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "reactstrap": "^9.0.0",
