--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^17.0.2",
     "react-animated-css": "^1.2.1",
     "react-dom": "^17.0.2",
+    "react-flip-move": "^3.0.4",
     "react-helmet": "^6.1.0",
     "react-image-lightbox": "^5.1.4",
     "react-placeholder": "^4.1.0",
