--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -199,5 +199,37 @@
     "isTeam": false,
     "isWork": false,
     "createdTimestamp": "2022-07-01T14:01:10Z"
+  },
+  {
+    "id": 13,
+    "title": "Flowverse NFT marketplace powered by the Flow Blockchain",
+    "img": {
+      "namePrefix": "flowversenft",
+      "extension": "png",
+      "count": 5
+    },
+    "tags": ["Flow Blockchain", "Cadence", "NFT", "Smart Contracts", "React", "NodeJS", "MongoDB"],
+    "url": "https://nft.flowverse.co",
+    "desc": "An NFT marketplace and launchpad on Flow mainnet with over 50 NFT collections with over 10000 sales.",
+    "date": "2023-06-01",
+    "isTeam": false,
+    "isWork": true,
+    "createdTimestamp": "2025-03-12T14:01:10Z"
+  },
+  {
+    "id": 14,
+    "title": "Color: First IP Marketplace on Story Network",
+    "img": {
+      "namePrefix": "colormp",
+      "extension": "png",
+      "count": 4
+    },
+    "tags": ["Story Protocol", "Solidity", "NFT", "React", "Go", "MongoDB"],
+    "url": "https://colormp.com",
+    "desc": "The first IP marketplace launchpad on Story mainnet with 18K MAU and 10K listings.",
+    "date": "2024-02-01",
+    "isTeam": false,
+    "isWork": true,
+    "createdTimestamp": "2025-03-13T14:01:10Z"
   }
 ]
