--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -186,7 +186,7 @@
   },
   {
     "id": 12,
-    "title": "NFTMarketFlow: NFT marketplace powered by the Flow Blockchain",
+    "title": "NFTMarketFlow",
     "img": {
       "namePrefix": "nftmarketflow",
       "extension": "png",
@@ -202,7 +202,7 @@
   },
   {
     "id": 13,
-    "title": "Flowverse NFT marketplace powered by the Flow Blockchain",
+    "title": "Flowverse NFT Marketplace",
     "img": {
       "namePrefix": "flowversenft",
       "extension": "png",
